# TAAC-2026-Mad-Scientists

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  environment.yaml  pyproject.toml  setup.py
core/config/: loader.py  omegaconf.py
core/data/: __init__.py  blocks.py  cache.py  collators.py  dataset.py  loader.py  masking.py  sampler.py  schema.py  schema.yaml  streaming.py
core/evaluation/: metrics.py
core/models/: base.py  dragon_chariot.py
core/models/modules/: __init__.py  adaptive_domain_scaling.py  context_moe.py  cross_network.py  din.py  embedders.py  heads.py  pretext.py  primitives.py  routing.py  segment_ops.py  seq_writer.py  st_cnn.py
core/training/: checkpoint.py  early_stopping.py  ema.py  loss.py  optim.py  utils.py
core/utils/: _hashing.pyx  device.py  distributed.py  hashing.py  logging.py  seed.py
requirements/: app.txt  dev.txt  extra-gpu.txt  extra.txt  gpu.txt
scripts/: execute.py  repr_projection.py
scripts/submission/: infer.py  run.sh
tools/: bundle.py  extract_prior.py  force_conflicts.py  inline_deps.py  save_configs.py
tools/bundler/: analysis.py  discovery.py  transform.py
tools/fbgemm_gpu_stub/: patch_torchrec.py  pyproject.toml
tools/fbgemm_gpu_stub/fbgemm_gpu/: __init__.py  ops.py  sparse_ops.py  split_embedding_configs.py  split_table_batched_embeddings_ops_common.py  split_table_batched_embeddings_ops_inference.py  split_table_batched_embeddings_ops_training.py
tools/fbgemm_gpu_stub/fbgemm_gpu/tbe/: monitoring.py
tools/fbgemm_gpu_stub/fbgemm_gpu/tbe/cache/: kv_embedding_ops_inference.py
(+21 files in other folders)
